--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -2,12 +2,12 @@
     "metadata": {
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python"
         },
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.9.7",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -50,14 +50,17 @@
             "cell_type": "code",
             "source": [
                 "# Import sqlite3 and pandas.\n",
+                "import sqlite3 as sl \n",
+                "import pandas as pd\n",
                 ""
             ],
             "metadata": {
                 "azdata_cell_guid": "865655b0-22e9-47f4-a5df-4bfe97dda4a3",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 15
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -74,13 +77,23 @@
             "cell_type": "code",
             "source": [
                 "# Create a new database called exercises.db.\n",
+                "con = sl.connect('exercise.db')\n",
+                "print (\"Opened database successfully\");\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12"
+                "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12",
+                "language": "python",
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": 16
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Opened database successfully\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -98,13 +111,22 @@
             "cell_type": "code",
             "source": [
                 "# Create a new table in your database.\n",
-                ""
+                "with con:\n",
+                "    con.execute(\"\"\"\n",
+                "         CREATE TABLE favorite_books (\n",
+                "             title TEXT,\n",
+                "             author TEXT,\n",
+                "             fav_reason\n",
+                "         );\n",
+                "\"\"\")\n",
+                "           "
             ],
             "metadata": {
-                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e"
+                "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 17
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -121,13 +143,22 @@
             "cell_type": "code",
             "source": [
                 "# Add your 3 favorite books to your table.\n",
-                ""
+                "sql = 'INSERT INTO favorite_books (title, author, fav_reason) values(?, ?, ? )'\n",
+                "data = [\n",
+                "    ( 'Religion and Culture','Michel Foucault', 'it has different view for religion and culture relationship'),\n",
+                "    ( '1984', 'George Orwell', 'it is good book for understanding society'),\n",
+                "    ('On Violence', 'Hannah Arendt', 'an important work on how violence is instrumentalized')\n",
+                "]\n",
+                "\n",
+                "with con:\n",
+                "    con.executemany(sql, data)"
             ],
             "metadata": {
-                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5"
+                "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 18
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -145,14 +176,24 @@
             "cell_type": "code",
             "source": [
                 "# Write your SELECT query here.\n",
-                ""
+                "with con:\n",
+                "    data = con.execute(\"SELECT * FROM favorite_books\")\n",
+                "    for row in data:\n",
+                "        print(row)"
             ],
             "metadata": {
                 "azdata_cell_guid": "c341e7e2-d635-4c26-b744-237c762f7f41",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 19
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "('Religion and Culture', 'Michel Foucault', 'it has different view for religion and culture relationship')\n('1984', 'George Orwell', 'it is good book for understanding society')\n('On Violence', 'Hannah Arendt', 'an important work on how violence is instrumentalized')\n('Religion and Culture', 'Michel Foucault', 'it has different view for religion and culture relationship')\n('1984', 'George Orwell', 'it is good book for understanding society')\n('On Violence', 'Hannah Arendt', 'an important work on how violence is instrumentalized')\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -169,13 +210,59 @@
             "cell_type": "code",
             "source": [
                 "# Use Pandas to make a new table in your database.\n",
-                ""
+                "favorite_movies = pd.DataFrame({\n",
+                "    'movie_id' : [101, 102, 103],\n",
+                "    'movie_title' : ['Pulp Fiction', 'Goodfellas', 'My Neighbor Totoro']\n",
+                "})"
             ],
             "metadata": {
-                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c"
+                "azdata_cell_guid": "b4b6dd20-ccc0-42e7-b1e7-79d8596b3f9c",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 20
+            "execution_count": 15
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "favorite_movies.to_sql('movies', con)"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "8f0e15dc-a8c0-403a-abc8-078bdb4d9622"
+            },
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": "3"
+                    },
+                    "metadata": {},
+                    "execution_count": 16,
+                    "output_type": "execute_result"
+                }
+            ],
+            "execution_count": 16
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "with con:\n",
+                "    data = con.execute('SELECT * FROM movies')\n",
+                "    for row in data:\n",
+                "        print(row)"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "a25b48a5-444b-49c8-9a28-15b85bfbd7a4"
+            },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "(0, 101, 'Pulp Fiction')\n(1, 102, 'Goodfellas')\n(2, 103, 'My Neighbor Totoro')\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 17
         }
     ]
 }
